--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "axios": "^1.7.2",
+    "encryptlong": "^3.1.4",
     "got": "^11.8.3",
     "iconv-lite": "^0.6.3",
+    "jsrsasign": "^11.1.0",
     "request": "^2.88.2",
     "sm-crypto": "^0.3.13",
     "tough-cookie": "^4.1.4"
